Tue Apr  2 21:10:10 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Tue Apr  2 21:03:22 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2936

Sun Mar 24 20:37:25 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/common/elfdefinitions.h: Fix ARM relocation issues.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/417

Sun Mar 24 18:13:32 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	Provide pkg-config support:
	* current-trunk/libelf-elftoolchain.pc.in: Add.
	* current-trunk/libelftc-elftoolchain.pc.in: Add.
	* current-trunk/libdwarf-elftoolchain.pc.in: Add.
	* current-trunk/configure.ac (PKG_INSTALLDIR): Use when available,
	otherwise provide --with-pkgconfigdir configure option with
	$(libdir)/pkgconfig as default.
	* current-trunk/GNUmakefile.am (pkgconfig_DATA): Add.

Sun Mar 17 20:42:14 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile (distclean): Add directory existence check.
	* current-trunk/libelf/GNUmakefile.am (dist_man3_MANS): Add elf_open.3.
	* current-trunk/as: Add svn:ignore property.
	* current-trunk/isa: Likewise.

Sun Mar 17 17:46:21 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile: Add.

Sun Mar 17 17:44:42 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sun Mar 17 17:00:37 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2921

Sun Mar 17 16:11:39 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Remove remaining svn:keywords properties.

Sat Dec  8 19:50:41 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Dec  8 19:18:34 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with