@@ -24,23 +24,67 @@ CLEANFILES = ${GENSRCS}
 
 RELEASE = HEAD		# Change this on release branches.
 
-dist_man3_MANS = elftc_bfd_find_target.3 \
+notrans_dist_man3_MANS = elftc.3 \
+	elftc_bfd_find_target.3 \
 	elftc_copyfile.3 \
 	elftc_demangle.3 \
 	elftc_set_timestamps.3 \
+	elftc_string_table_create.3 \
 	elftc_version.3
 
-man3_MANS = \
+notrans_man3_MANS = \
 	elftc_bfd_target_byteorder.3 \
 	elftc_bfd_target_class.3 \
-	elftc_bfd_target_flavor.3
-	
-elftc_bfd_target_byteorder.3: elftc_bfd_find_target.3
-elftc_bfd_target_class.3: elftc_bfd_find_target.3
-elftc_bfd_target_flavor.3: elftc_bfd_find_target.3
+	elftc_bfd_target_flavor.3 \
+	elftc_string_table_from_section.3 \
+	elftc_string_table_destroy.3 \
+	elftc_string_table_image.3 \
+	elftc_string_table_insert.3 \
+	elftc_string_table_lookup.3 \
+	elftc_symbol_table_create_nested.3 \
+	elftc_symbol_table_delete_name.3 \
+	elftc_symbol_table_delete_entry.3 \
+	elftc_symbol_table_destroy.3 \
+	elftc_symbol_table_from_section.3 \
+	elftc_symbol_table_insert.3 \
+	elftc_symbol_table_iterate.3 \
+	elftc_symbol_table_lookup.3 \
+	elftc_symbol_table_to_image.3
 
-%.3: %.3
-	cp $< $@
+elftc_bfd_target_byteorder.3: elftc_bfd_find_target.3
+	$(LN_S) $< $@
+elftc_bfd_target_class.3: elftc_bfd_find_target.3
+	$(LN_S) $< $@
+elftc_bfd_target_flavor.3: elftc_bfd_find_target.3
+	$(LN_S) $< $@
+elftc_string_table_from_section.3: elftc_string_table_create.3
+	$(LN_S) $< $@
+elftc_string_table_destroy.3: elftc_string_table_create.3
+	$(LN_S) $< $@
+elftc_string_table_image.3: elftc_string_table_create.3
+	$(LN_S) $< $@
+elftc_string_table_insert.3: elftc_string_table_create.3
+	$(LN_S) $< $@
+elftc_string_table_lookup.3: elftc_string_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_create_nested.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_delete_name.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_delete_entry.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_destroy.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_from_section.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_insert.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_iterate.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_lookup.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
+elftc_symbol_table_to_image.3: elftc_symbol_table_create.3
+	$(LN_S) $< $@
 
 elftc_version.c: make-toolchain-version
 	${srcdir}/make-toolchain-version -t ${top_srcdir} -r ${RELEASE}
